# Option-Pricing

./: CMakeLists.txt  LICENSE  README.md
docs/: article.tex
docs/sections/: 01_introduction.md  02_methods_provided.md  03_explanation_notes.md  06_description_methods.md
examples/notebooks/: cli_demo.cpp
include/fxoptions/: bs.hpp  mc.hpp  pde.hpp  quadrature.hpp
src/: bs.cpp  mc.cpp  pde.cpp  quadrature.cpp
tests/: test_bs.cp  test_bs.cpp
